tests/fail/01_undeclared_func.c
int main() {
	return foo();  // ERROR: undeclared function
}
